# tauri-create

./: README.md  README.zh-CN.md  build.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/: FUNDING.yml
src/: arrays.ts  banner.ts  errors.ts  runner.ts  type.ts
src/commands/: create.ts
template/: config.json
template/nextjs-ts/: pnpm-lock.yaml
template/nextjs-ts/.github/workflows/: ci.yml
template/nextjs-ts/src-tauri/: .gitignore
template/nextjs-ts/src-tauri/capabilities/: default.json
template/nextjs-ts/src-tauri/src/: lib.rs  main.rs
template/nextjs-ts/src/components/: header.tsx
template/nextjs-ts/src/components/ui/: button.tsx  index.ts
template/nextjs-ts/src/lib/: providers.tsx
template/nextjs-ts/src/store/: language.ts
templates/: config.json  config.ts
templates/nextjs-ts/: Makefile  _.gitignore  _.lintstagedrc.mjs  _editorconfig  _eslint.config.mjs  _pre-commit-config.yaml  _tailwind.config.ts  next.config.ts  package.json  tsconfig.tsbuildinfo
templates/nextjs-ts/scripts/: prefix.ts
templates/nextjs-ts/src-tauri/: Cargo.toml  tauri.conf.json
templates/nextjs-ts/src-tauri/src/: lib.rs
templates/nextjs-ts/src/app/: globals.css  layout.tsx  page.tsx
templates/nextjs-ts/src/components/: nav.tsx  win-display-controller.tsx
templates/nextjs-ts/src/lib/: feign-desktop.ts
templates/nextjs-ts/src/utils/: math.spec.ts
templates/svelte-ts/: package.json  pnpm-lock.yaml
templates/svelte-ts/.svelte-kit/: ambient.d.ts
templates/svelte-ts/src-tauri/: Cargo.toml  tauri.conf.json
templates/svelte-ts/src-tauri/src/: main.rs
templates/vue-ts/: package.json
templates/vue-ts/src-tauri/: Cargo.toml  tauri.conf.json
templates/vue-ts/src-tauri/src/: main.rs
test/: arrays.test.ts
(+4 files in other folders)
