[package]
name = "rust-tauri-nextjs-template"
version = "0.1.0"
description = "A Tauri App template with NextJS"
authors = ["Clover You"]
edition = "2021"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_tauri_nextjs_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.41.1", features = ["tokio-macros", "macros"] }
