[package]
name = "rust-tauri-nextjs-template"
version = "0.1.0"
description = "A Tauri App template with NextJS"
authors = ["Clover You"]
edition = "2024"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_tauri_nextjs_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.44.0", features = ["tokio-macros", "macros"] }
anyhow = "1.0.97"
